# pdf-halves-merger

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
pdf_halves_merger/: main.py
tests/: main_test.py
