[tool.poetry]
name = "pdf-halves-merger"
version = "1.0.1"
description = "crop halves of 2 single page PDFs & concat them into 1 PDF"
authors = ["atloo1"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymupdf = "^1.24.5"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.7.1"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]  # sort imports

[tool.ruff.format]
quote-style = "single"
