[tool.poetry]
name = "pdf-halves-merger"
version = "1.1.0"
description = "crop halves of 2 single page PDFs & concat them into 1 PDF"
authors = ["atloo1 <15357562+atloo1@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
pymupdf = "^1.24.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.7.1"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]  # sort imports

[tool.ruff.format]
quote-style = "single"
